--- a/style.css
+++ b/style.css
@@ -61,6 +61,15 @@ input[type="submit"]:hover {
     opacity: 0.8;
 }
 
+
+#resultado {
+    width: 100%;
+    max-width: 500px;
+    margin-top: 40px;
+    text-align: center;
+    font-size: 18px;
+}
+
 footer {
     width: 100%;
     height: 48px;
