--- a/style.css
+++ b/style.css
@@ -37,16 +37,22 @@ form {
 
 div {
     margin-bottom: 16px;
+    max-width: 500px;
+    width: 100%;
+    text-align: center;
 }
 
 label {
     font-size: 18px;
+    width: 60%;
 }
 
 input {
     padding: 8px; 
     border-radius: 4px;
     border: 1px solid #8e8e8e;
+    width: 40%;
+    
 }
 
 input[type="submit"] {
@@ -90,4 +96,33 @@ a {
 a:hover {
     color: blue;
     text-decoration: underline;
+}
+
+@media (max-width: 500px) {
+    h1 {
+        font-size: 32px;
+    }
+
+    form {
+        width: 90%;
+        justify-content: center;
+        height: 50vh;
+        padding: 6px;
+    }
+
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    input {
+        margin-top: 8px;
+        width: 75%;
+    }
+
+    a {
+        text-decoration: underline;
+        color: blue;
+    }
 }
